--- a/research/cifar100_effnetB5.ipynb
+++ b/research/cifar100_effnetB5.ipynb
@@ -130,7 +130,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -145,12 +145,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
         "file = r'E:\\STUDIES\\data_science\\ML\\Deep_Learning\\DL_PRACTICALS\\cifar-100-python\\cifar-100-python\\train'\n",
         "train_data = unpickle(file)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'dict'>\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(type(train_data))"
       ]
     },
     {
@@ -252,9 +269,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'unpickle' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m file \u001b[39m=\u001b[39m \u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39mE:\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mSTUDIES\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mdata_science\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mML\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mDeep_Learning\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mDL_PRACTICALS\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mcifar-100-python\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mcifar-100-python\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mtest\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> 2\u001b[0m test_data \u001b[39m=\u001b[39m unpickle(file)\n\u001b[0;32m      3\u001b[0m \u001b[39m#testData\u001b[39;00m\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'unpickle' is not defined"
+          ]
+        }
+      ],
       "source": [
         "file = r'E:\\STUDIES\\data_science\\ML\\Deep_Learning\\DL_PRACTICALS\\cifar-100-python\\cifar-100-python\\test'\n",
         "test_data = unpickle(file)\n",
@@ -1081,7 +1110,7 @@
         "    for j in range(0, num_col):\n",
         "        k = (i*num_col)+j\n",
         "        axes[i,j].imshow(X_test[imageId[k]])\n",
-        "        axes[i,j].set_title(\"True: \" + str(subCategory.iloc[testData['fine_labels'][imageId[k]]][0]).capitalize() \n",
+        "        axes[i,j].set_title(\"True: \" + str(subCategory.iloc[test_data['fine_labels'][imageId[k]]][0]).capitalize() \n",
         "                             + \"\\nPredicted: \" + str(subCategory.iloc[prediction.iloc[imageId[k]]]).split()[2].capitalize(), \n",
         "                            fontsize=14)\n",
         "        axes[i,j].axis('off')\n",
