--- a/research/cifar100_effnetB5.ipynb
+++ b/research/cifar100_effnetB5.ipynb
@@ -761,7 +761,7 @@
         "n_classes = 100\n",
         "input_shape = (height, width, channels)\n",
         "\n",
-        "epochs = 15\n",
+        "epochs = 2\n",
         "batch_size = 8"
       ]
     },
@@ -827,11 +827,21 @@
         "    \n",
         "    #return numbers of steps in an epoch using samples and batch size\n",
         "    def __len__(self):\n",
+        "        \n",
+        "        \"\"\"Returns the number of steps in an epoch, which is calculated as the \n",
+        "        total number of samples divided by the batch size, rounded down to the nearest integer.\"\"\"\n",
+        "        \n",
         "        return int(np.floor(len(self.images) / self.batch_size))\n",
         "    \n",
         "     #this method is called with the batch number as an argument to obtain a given batch of data\n",
         "    def __getitem__(self, index):\n",
-        "        #generate one batch of data\n",
+        "        \n",
+        "        \"\"\"This method is called with the batch number as an argument to obtain a given batch of data. \n",
+        "        It generates a mini-batch of X and y, where X is an array of preprocessed images \n",
+        "        and y is an array of corresponding labels (if mode is fit). \n",
+        "        If augment is set to True, data augmentation is applied to the training dataset. \n",
+        "        If mode is set to predict, only X is returned.\"\"\"\n",
+        "        \n",
         "        #generate indexes of batch\n",
         "        batch_indexes = self.indexes[index * self.batch_size:(index+1) * self.batch_size]\n",
         "        \n",
@@ -844,7 +854,7 @@
         "            #image rescaling\n",
         "            img = img.astype(np.float32)/255.\n",
         "            #resizing as per new dimensions\n",
-        "            img = resize_img(img, self.dim)\n",
+        "            img = resize_img(img, self.dim)   # use the resize function\n",
         "            X[i] = img\n",
         "            \n",
         "        #generate mini-batch of y\n",
@@ -877,6 +887,10 @@
         "    \n",
         "    #augmentation for batch of images\n",
         "    def __augment_batch(self, img_batch):\n",
+        "        \n",
+        "        \"\"\"This method applies a random transformation to a batch of images by calling \n",
+        "        the __random_transform method for each image in the batch.\"\"\"\n",
+        "        \n",
         "        for i in range(img_batch.shape[0]):\n",
         "            img_batch[i] = self.__random_transform(img_batch[i])\n",
         "        return img_batch\n",
@@ -890,7 +904,7 @@
       "outputs": [],
       "source": [
         "train_data_generator = DataGenerator(X_train_data, y_train_data, augment=True)\n",
-        "valid_data_generator = DataGenerator(X_val_data, y_val_data, augment=False)"
+        "valid_data_generator = DataGenerator(X_val_data, y_val_data, augment=False) # augmentation turned off for validation set during training"
       ]
     },
     {
@@ -973,7 +987,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
         "#saving the trained model as data file in .h5 format\n",
         "model.save('cifar_efficientnetb0_model.h5')"
       ]
