--- a/research/training.ipynb
+++ b/research/training.ipynb
@@ -44,8 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deepClassifier.constants import *\n",
-    "from deepClassifier.utils import read_yaml, create_directories\n",
+    "from cifar100classifier.constants import *\n",
+    "from cifar100classifier.components.prepare_callbacks import PrepareCallback\n",
+    "from cifar100classifier.utils import read_yaml, create_directories\n",
     "import tensorflow as tf"
    ]
   },
@@ -109,11 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import urllib.request as request\n",
-    "from zipfile import ZipFile\n",
     "import tensorflow as tf\n",
-    "import time\n",
     "\n",
     "class Training:\n",
     "    def __init__(self, config: TrainingConfig):\n",
@@ -124,54 +121,9 @@
     "            self.config.updated_base_model_path\n",
     "        )\n",
     "\n",
-    "    def train_valid_generator(self):\n",
-    "\n",
-    "        datagenerator_kwargs = dict(\n",
-    "            rescale = 1./255,\n",
-    "            validation_split=0.20\n",
-    "        )\n",
-    "\n",
-    "        dataflow_kwargs = dict(\n",
-    "            target_size=self.config.params_image_size[:-1],\n",
-    "            batch_size=self.config.params_batch_size,\n",
-    "            interpolation=\"bilinear\"\n",
-    "        )\n",
-    "\n",
-    "        valid_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
-    "            **datagenerator_kwargs\n",
-    "        )\n",
-    "\n",
-    "        self.valid_generator = valid_datagenerator.flow_from_directory(\n",
-    "            directory=self.config.training_data,\n",
-    "            subset=\"validation\",\n",
-    "            shuffle=False,\n",
-    "            **dataflow_kwargs\n",
-    "        )\n",
-    "\n",
-    "        if self.config.params_is_augmentation:\n",
-    "            train_datagenerator = tf.keras.preprocessing.image.ImageDataGenerator(\n",
-    "                rotation_range=40,\n",
-    "                horizontal_flip=True,\n",
-    "                width_shift_range=0.2,\n",
-    "                height_shift_range=0.2,\n",
-    "                shear_range=0.2,\n",
-    "                zoom_range=0.2,\n",
-    "                **datagenerator_kwargs\n",
-    "            )\n",
-    "        else:\n",
-    "            train_datagenerator = valid_datagenerator\n",
-    "\n",
-    "        self.train_generator = train_datagenerator.flow_from_directory(\n",
-    "            directory=self.config.training_data,\n",
-    "            subset=\"training\",\n",
-    "            shuffle=True,\n",
-    "            **dataflow_kwargs\n",
-    "        )\n",
-    "\n",
     "    @staticmethod\n",
     "    def save_model(path: Path, model: tf.keras.Model):\n",
     "        model.save(path)\n",
-    "\n",
     "\n",
     "    def train(self, callback_list: list):\n",
     "        self.steps_per_epoch = self.train_generator.samples // self.train_generator.batch_size\n",
@@ -218,8 +170,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "cifar100",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.16"
   },
   "orig_nbformat": 4
  },
